--- a/test/browser/index.html
+++ b/test/browser/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     <div id="mocha"></div>
+    <script src="../../node_modules/chai/chai.js"></script>
     <script src="../../node_modules/mocha/mocha.js"></script>
     <script>mocha.setup('bdd')</script>
-    <script src="testbundle.js"></script>
-    <script>
+    <script type="module" src="../tests.js"></script>
+    <script type="module">
         mocha.checkLeaks();
         mocha.run();
     </script>
