--- a/test/browser/index.html
+++ b/test/browser/index.html
@@ -7,7 +7,13 @@
 </head>
 <body>
     <div id="mocha"></div>
-    <script src="../../node_modules/chai/chai.js"></script>
+    <script type="importmap">
+    {
+        "imports": {
+            "chai": "../../node_modules/chai/chai.js"
+        }
+    }
+    </script>      
     <script src="../../node_modules/mocha/mocha.js"></script>
     <script>mocha.setup('bdd')</script>
     <script type="module" src="../tests.js"></script>
